--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         data-tags="CRM, Financeiro, Aulas Online">
         <div class="case-card__media">
           <img src="assets/case01/case07.png" alt="Sistema de gestão Dan-sa " loading="lazy" decoding="async" width="800" height="500">
-          <span class="case-card__badge">CRM</span>
+          <span class="case-card__badge">Sistema de Gestão</span>
         </div>
         <div class="case-card__body">
           <h3>Sistema de Gestão Dan-sa</h3>
@@ -355,22 +355,22 @@
       <article class="case-card"
         data-title="Cout Barbershop"
         data-images='[
-          "assets/cases02/case02_01.png",
-          "assets/cases02/case02_02.png",
-          "assets/cases02/case02_03.png",
-          "assets/cases02/case02_04.png",
-          "assets/cases02/case02_05.png",
-          "assets/cases02/case02_06.png",
-          "assets/cases02/case02_07.png"
+          "assets/case02/case02_01.png",
+          "assets/case02/case02_02.png",
+          "assets/case02/case02_08.png",
+          "assets/case02/case02_04.png",
+          "assets/case02/case02_05.png",
+          "assets/case02/case02_06.png",
+          "assets/case02/case02_07.png"
           ]'
         data-tags="Landing, Conversão, Teste A/B">
         <div class="case-card__media">
-          <img src="assets/cases/vitriny/thumb.jpg" alt="Vitriny Landing" loading="lazy" decoding="async" width="800" height="500">
-          <span class="case-card__badge">Landing</span>
+          <img src="assets/case02/case02_04.png" alt="Cout Barbershop Sistema de Gestão" loading="lazy" decoding="async" width="800" height="500">
+          <span class="case-card__badge">Sistema de Gestão</span>
         </div>
         <div class="case-card__body">
-          <h3>Vitriny Landing</h3>
-          <p>Landing focada em conversão com prova social e CTAs claros.</p>
+          <h3>Cout Barbershop</h3>
+          <p>Sistema para gestão de barbearias em Expansão - Sistema próprio</p>
         </div>
       </article>
 
