--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
           "assets/case02/case02_06.png",
           "assets/case02/case02_07.png"
           ]'
-        data-tags="Landing, Conversão, Teste A/B">
+        data-tags="Barbearia, Sistema de Gestão, PDV, Gestão de estoques, Sistema de agendamentos">
         <div class="case-card__media">
           <img src="assets/case02/case02_04.png" alt="Cout Barbershop Sistema de Gestão" loading="lazy" decoding="async" width="800" height="500">
           <span class="case-card__badge">Sistema de Gestão</span>
