--- a/index.html
+++ b/index.html
@@ -375,19 +375,25 @@
 
       <!-- Card 3 -->
       <article class="case-card"
-        data-title="Dashboard de KPIs"
+        data-title="Vitriny AI"
         data-images='[
-          "assets/cases/dashboard/01.jpg",
-          "assets/cases/dashboard/02.jpg"
-        ]'
-        data-tags="Dashboard, KPIs, Data Viz">
+          "assets/case03/case03_01.png",
+          "assets/case03/case03_02.png",
+          "assets/case03/case03_03.png",
+          "assets/case03/case03_04.png",
+          "assets/case03/case03_05.png",
+          "assets/case03/case03_06.png",
+          "assets/case03/case03_07.png",
+          "assets/case03/case03_08.png"
+          ]'
+        data-tags="Transformação de imagens, Inteligencia artificial, Saas, Marketplace, Studio">
         <div class="case-card__media">
-          <img src="assets/cases/dashboard/thumb.jpg" alt="Dashboard de KPIs" loading="lazy" decoding="async" width="800" height="500">
-          <span class="case-card__badge">Dashboard</span>
+          <img src="assets/case03/case03_01.png" alt="Geração de imagens por IA" loading="lazy" decoding="async" width="800" height="500">
+          <span class="case-card__badge">Inteligencia Artificial</span>
         </div>
         <div class="case-card__body">
-          <h3>Dashboard de KPIs</h3>
-          <p>Métricas em tempo real por funil e produtividade por consultor.</p>
+          <h3>Inteligencia Artificial</h3>
+          <p>Geração de imagens profissionais com alta produtividade</p>
         </div>
       </article>
     </div>
