--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
 
     <!-- Cases Section -->
- <!-- ===== CASES ===== -->
+<!-- ===== CASES ===== -->
 <section id="cases" class="cases">
   <div class="container">
     <header class="cases__header">
@@ -327,76 +327,83 @@
       <p>Projetos 100% customizados de acordo com as suas necessidades</p>
     </header>
 
-    <div class="cases__grid">
-      <!-- Card 1 -->
-      <article class="case-card"
-        data-title="Sistema de Gestão Dan-sa"
-        data-images='[
-          "assets/case01/case01.png",
-          "assets/case01/case02.png",
-          "assets/case01/case03.png",
-          "assets/case01/case04.png",
-          "assets/case01/case05.png",
-          "assets/case01/case06.png",
-          "assets/case01/case07.png"
-        ]'
-        data-tags="CRM, Financeiro, Aulas Online">
-        <div class="case-card__media">
-          <img src="assets/case01/case07.png" alt="Sistema de gestão Dan-sa " loading="lazy" decoding="async" width="800" height="500">
-          <span class="case-card__badge">Sistema de Gestão</span>
-        </div>
-        <div class="case-card__body">
-          <h3>Sistema de Gestão Dan-sa</h3>
-          <p>CRM, funil de vendas, gestão financeira, Plataforma de aulas on-line, Gestão de estoques e integração com Marketplaces</p>
-        </div>
-      </article>
+    <div class="cases__carousel">
+      <button class="cases__arrow cases__arrow--prev" aria-label="Anterior" data-cases-prev>‹</button>
 
-      <!-- Card 2 -->
-      <article class="case-card"
-        data-title="Cout Barbershop"
-        data-images='[
-          "assets/case02/case02_05.png",
-          "assets/case02/case02_08.png",
-          "assets/case02/case02_04.png",
-          "assets/case02/case02_01.png",
-          "assets/case02/case02_06.png",
-          "assets/case02/case02_07.png"
+      <div class="cases__grid" id="casesGrid" tabindex="0" aria-label="Lista de projetos">
+        <!-- Card 1 -->
+        <article class="case-card"
+          data-title="Sistema de Gestão Dan-sa"
+          data-images='[
+            "assets/case01/case01.png",
+            "assets/case01/case02.png",
+            "assets/case01/case03.png",
+            "assets/case01/case04.png",
+            "assets/case01/case05.png",
+            "assets/case01/case06.png",
+            "assets/case01/case07.png"
           ]'
-        data-tags="Barbearia, Sistema de Gestão, PDV, Gestão de estoques, Sistema de agendamentos">
-        <div class="case-card__media">
-          <img src="assets/case02/case02_04.png" alt="Cout Barbershop Sistema de Gestão" loading="lazy" decoding="async" width="800" height="500">
-          <span class="case-card__badge">Sistema de Gestão</span>
-        </div>
-        <div class="case-card__body">
-          <h3>Cout Barbershop</h3>
-          <p>Sistema para gestão de barbearias em Expansão - Sistema próprio</p>
-        </div>
-      </article>
+          data-tags="CRM, Financeiro, Aulas Online">
+          <div class="case-card__media">
+            <img src="assets/case01/case07.png" alt="Sistema de gestão Dan-sa " loading="lazy" decoding="async" width="800" height="500">
+            <span class="case-card__badge">Sistema de Gestão</span>
+          </div>
+          <div class="case-card__body">
+            <h3>Sistema de Gestão Dan-sa</h3>
+            <p>CRM, funil de vendas, gestão financeira, Plataforma de aulas on-line, Gestão de estoques e integração com Marketplaces</p>
+          </div>
+        </article>
 
-      <!-- Card 3 -->
-      <article class="case-card"
-        data-title="Vitriny AI"
-        data-images='[
-          "assets/case03/case03_01.png",
-          "assets/case03/case03_02.png",
-          "assets/case03/case03_03.png",
-          "assets/case03/case03_04.png",
-          "assets/case03/case03_05.png",
-          "assets/case03/case03_06.png",
-          "assets/case03/case03_07.png",
-          "assets/case03/case03_08.png"
-          
+        <!-- Card 2 -->
+        <article class="case-card"
+          data-title="Cout Barbershop"
+          data-images='[
+            "assets/case02/case02_05.png",
+            "assets/case02/case02_08.png",
+            "assets/case02/case02_04.png",
+            "assets/case02/case02_01.png",
+            "assets/case02/case02_06.png",
+            "assets/case02/case02_07.png"
           ]'
-        data-tags="Transformação de imagens, Inteligencia artificial, Saas, Marketplace, Studio">
-        <div class="case-card__media">
-          <img src="assets/case03/case03_01.png" alt="Geração de imagens por IA" loading="lazy" decoding="async" width="800" height="500">
-          <span class="case-card__badge">Inteligencia Artificial</span>
-        </div>
-        <div class="case-card__body">
-          <h3>Inteligencia Artificial</h3>
-          <p>Geração de imagens profissionais com alta produtividade</p>
-        </div>
-      </article>
+          data-tags="Barbearia, Sistema de Gestão, PDV, Gestão de estoques, Sistema de agendamentos">
+          <div class="case-card__media">
+            <img src="assets/case02/case02_04.png" alt="Cout Barbershop Sistema de Gestão" loading="lazy" decoding="async" width="800" height="500">
+            <span class="case-card__badge">Sistema de Gestão</span>
+          </div>
+          <div class="case-card__body">
+            <h3>Cout Barbershop</h3>
+            <p>Sistema para gestão de barbearias em Expansão - Sistema próprio</p>
+          </div>
+        </article>
+
+        <!-- Card 3 -->
+        <article class="case-card"
+          data-title="Vitriny AI"
+          data-images='[
+            "assets/case03/case03_01.png",
+            "assets/case03/case03_02.png",
+            "assets/case03/case03_03.png",
+            "assets/case03/case03_04.png",
+            "assets/case03/case03_05.png",
+            "assets/case03/case03_06.png",
+            "assets/case03/case03_07.png",
+            "assets/case03/case03_08.png"
+          ]'
+          data-tags="Transformação de imagens, Inteligencia artificial, Saas, Marketplace, Studio">
+          <div class="case-card__media">
+            <img src="assets/case03/case03_01.png" alt="Geração de imagens por IA" loading="lazy" decoding="async" width="800" height="500">
+            <span class="case-card__badge">Inteligencia Artificial</span>
+          </div>
+          <div class="case-card__body">
+            <h3>Inteligencia Artificial</h3>
+            <p>Geração de imagens profissionais com alta produtividade</p>
+          </div>
+        </article>
+
+        <!-- 🔹 Adicione mais artigos aqui duplicando o padrão acima -->
+      </div>
+
+      <button class="cases__arrow cases__arrow--next" aria-label="Próximo" data-cases-next>›</button>
     </div>
   </div>
 </section>
