--- a/index.html
+++ b/index.html
@@ -400,6 +400,33 @@
           </div>
         </article>
 
+          <!-- Card 4 -->
+        <article class="case-card"
+          data-title="Grow Properties"
+          data-images='[
+            "assets/case04/case04_01.png",
+            "assets/case04/case04_02.png",
+            "assets/case04/case04_03.png",
+            "assets/case04/case04_04.png",
+            "assets/case04/case04_05.png",
+            "assets/case04/case04_06.png",
+            "assets/case04/case04_07.png",
+            "assets/case04/case04_08.png",
+            "assets/case04/case04_09.png",
+            "assets/case04/case04_10.png",
+            "assets/case04/case04_11.png"
+          ]'
+          data-tags="Leilões, Real State, Sistema de Gestão, Investimentos">
+          <div class="case-card__media">
+            <img src="assets/case03/case03_01.png" alt="Sistema de Gestão no ramo de Real State" loading="lazy" decoding="async" width="800" height="500">
+            <span class="case-card__badge">Real State</span>
+          </div>
+          <div class="case-card__body">
+            <h3>Real State</h3>
+            <p>Sistema de Gestão para empresas do ramo de Real State</p>
+          </div>
+        </article>
+
         <!-- 🔹 Adicione mais artigos aqui duplicando o padrão acima -->
       </div>
 
