--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             <span class="case-card__badge">Real State</span>
           </div>
           <div class="case-card__body">
-            <h3>Real State</h3>
+            <h3>Grow Properties</h3>
             <p>Sistema de Gestão para empresas do ramo de Real State</p>
           </div>
         </article>
