--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             <span class="case-card__badge">Inteligencia Artificial</span>
           </div>
           <div class="case-card__body">
-            <h3>Inteligencia Artificial</h3>
+            <h3>Vitriny AI</h3>
             <p>Geração de imagens profissionais com alta produtividade</p>
           </div>
         </article>
