--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                         <img src="assets/Luana.jpg" alt="Luana" />
                     </div>
                     <h3 class="team-name">Luana</h3>
-                    <p class="team-role">fundadora</p>
+                    <p class="team-role">Fundadora</p>
                     <p class="team-description">
                         Especialista em projetos focados em automação, eficiência operacional e redução de erros. Visão estratégica de negócios.
                     </p>
