feat: enhance SEO metadata

--- a/index.html
+++ b/index.html
@@ -3,15 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Labrego IA - Soluções Digitais com Inteligência Artificial</title>
-    <meta name="description" content="Soluções inteligentes para automatizar processos e acelerar o crescimento da sua empresa.">
-    <meta name="keywords" content="inteligência artificial, automação, desenvolvimento, aplicativos, IA, tecnologia, soluções digitais">
+    <title>Labrego IA - Desenvolvimento de Apps, Sistemas e Automação com IA</title>
+    <meta name="description" content="Desenvolvimento de aplicativos, sistemas e agentes inteligentes com automação de processos para impulsionar seu negócio.">
+    <meta name="keywords" content="desenvolvimento de apps, desenvolvimento de sistemas, automação de processos, agentes inteligentes, inteligência artificial, IA, tecnologia">
+    <link rel="canonical" href="https://labregoia.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Labrego IA">
+    <meta property="og:title" content="Labrego IA - Desenvolvimento de Apps, Sistemas e Automação com IA">
+    <meta property="og:description" content="Desenvolvimento de aplicativos, sistemas e agentes inteligentes com automação de processos para impulsionar seu negócio.">
+    <meta property="og:url" content="https://labregoia.com/">
+    <meta property="og:image" content="https://labregoia.com/assets/LogoPrincipal-1.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Labrego IA - Desenvolvimento de Apps, Sistemas e Automação com IA">
+    <meta name="twitter:description" content="Desenvolvimento de aplicativos, sistemas e agentes inteligentes com automação de processos para impulsionar seu negócio.">
+    <meta name="twitter:image" content="https://labregoia.com/assets/LogoPrincipal-1.png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Goodly:wght@400;700&display=swap" rel="stylesheet">
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Labrego IA",
+        "url": "https://labregoia.com/",
+        "logo": "https://labregoia.com/assets/LogoPrincipal-1.png",
+        "sameAs": [
+            "https://www.linkedin.com/company/labrego-ia",
+            "https://www.instagram.com/labregoia",
+            "https://wa.me/11934427070",
+            "https://www.youtube.com/@labregoia"
+        ]
+    }
+    </script>
 </head>
 <body>
     <!-- Header -->
