--- a/pages/agentes-inteligentes.html
+++ b/pages/agentes-inteligentes.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agentes Inteligentes - Labrego IA</title>
-    <meta name="description" content="IA conversacional para atendimento, vendas e suporte, trabalhando 24h por dia. Implementamos chatbots e voicebots inteligentes que automatizam interações.">
+    <meta name="description" content="Chatbots e voicebots com IA conversacional para atendimento, vendas e suporte 24h.">
+    <meta name="keywords" content="agentes inteligentes, chatbots, voicebots, IA conversacional, atendimento automatizado">
+    <link rel="canonical" href="https://labregoia.com/servicos/agentes-inteligentes">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Labrego IA">
+    <meta property="og:title" content="Agentes Inteligentes - Labrego IA">
+    <meta property="og:description" content="Chatbots e voicebots com IA conversacional para atendimento, vendas e suporte 24h.">
+    <meta property="og:url" content="https://labregoia.com/servicos/agentes-inteligentes">
+    <meta property="og:image" content="https://labregoia.com/assets/LogoPrincipal-1.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Agentes Inteligentes - Labrego IA">
+    <meta name="twitter:description" content="Chatbots e voicebots com IA conversacional para atendimento, vendas e suporte 24h.">
+    <meta name="twitter:image" content="https://labregoia.com/assets/LogoPrincipal-1.png">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
