--- a/pages/aplicativos-sob-medida.html
+++ b/pages/aplicativos-sob-medida.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aplicativos Sob Medida - Labrego IA</title>
-    <meta name="description" content="Desenvolvemos sistemas web e mobile personalizados para escalar suas vendas e otimizar operações, eliminando controles manuais e integrando processos.">
+    <meta name="description" content="Desenvolvimento de aplicativos e sistemas sob medida para web e mobile, integrando processos e escalando operações.">
+    <meta name="keywords" content="desenvolvimento de aplicativos, desenvolvimento de apps, software sob medida, sistemas personalizados, aplicativos mobile">
+    <link rel="canonical" href="https://labregoia.com/servicos/aplicativos-sob-medida">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Labrego IA">
+    <meta property="og:title" content="Aplicativos Sob Medida - Labrego IA">
+    <meta property="og:description" content="Desenvolvimento de aplicativos e sistemas sob medida para web e mobile, integrando processos e escalando operações.">
+    <meta property="og:url" content="https://labregoia.com/servicos/aplicativos-sob-medida">
+    <meta property="og:image" content="https://labregoia.com/assets/LogoPrincipal-1.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Aplicativos Sob Medida - Labrego IA">
+    <meta name="twitter:description" content="Desenvolvimento de aplicativos e sistemas sob medida para web e mobile, integrando processos e escalando operações.">
+    <meta name="twitter:image" content="https://labregoia.com/assets/LogoPrincipal-1.png">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
