--- a/pages/inteligencia-artificial.html
+++ b/pages/inteligencia-artificial.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inteligência Artificial Aplicada - Labrego IA</title>
-    <meta name="description" content="IA que decide, organiza, gera e transforma dados em ação estratégica. Desenvolvemos soluções de inteligência artificial que otimizam decisões e automatizam processos complexos.">
+    <meta name="description" content="Soluções de inteligência artificial e machine learning que transformam dados em ação estratégica e automatizam processos complexos.">
+    <meta name="keywords" content="inteligência artificial, IA aplicada, machine learning, automação inteligente, análise de dados">
+    <link rel="canonical" href="https://labregoia.com/servicos/inteligencia-artificial">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Labrego IA">
+    <meta property="og:title" content="Inteligência Artificial Aplicada - Labrego IA">
+    <meta property="og:description" content="Soluções de inteligência artificial e machine learning que transformam dados em ação estratégica e automatizam processos complexos.">
+    <meta property="og:url" content="https://labregoia.com/servicos/inteligencia-artificial">
+    <meta property="og:image" content="https://labregoia.com/assets/LogoPrincipal-1.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Inteligência Artificial Aplicada - Labrego IA">
+    <meta name="twitter:description" content="Soluções de inteligência artificial e machine learning que transformam dados em ação estratégica e automatizam processos complexos.">
+    <meta name="twitter:image" content="https://labregoia.com/assets/LogoPrincipal-1.png">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
