--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serviços de Inteligência Artificial - Labrego IA</title>
-    <meta name="description" content="Conheça todos os serviços de IA da Labrego: Aplicativos Sob Medida, Automação de Processos, Inteligência Artificial Aplicada e Agentes Inteligentes.">
+    <meta name="description" content="Conheça nossos serviços de desenvolvimento de apps, sistemas, automação de processos e agentes inteligentes com IA.">
+    <meta name="keywords" content="desenvolvimento de apps, sistemas sob medida, automação de processos, agentes inteligentes, inteligência artificial">
+    <link rel="canonical" href="https://labregoia.com/servicos">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Labrego IA">
+    <meta property="og:title" content="Serviços de Inteligência Artificial - Labrego IA">
+    <meta property="og:description" content="Conheça nossos serviços de desenvolvimento de apps, sistemas, automação de processos e agentes inteligentes com IA.">
+    <meta property="og:url" content="https://labregoia.com/servicos">
+    <meta property="og:image" content="https://labregoia.com/assets/LogoPrincipal-1.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Serviços de Inteligência Artificial - Labrego IA">
+    <meta name="twitter:description" content="Conheça nossos serviços de desenvolvimento de apps, sistemas, automação de processos e agentes inteligentes com IA.">
+    <meta name="twitter:image" content="https://labregoia.com/assets/LogoPrincipal-1.png">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
