--- a/pages/automacao-processos.html
+++ b/pages/automacao-processos.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automação de Processos - Labrego IA</title>
-    <meta name="description" content="Eliminamos tarefas repetitivas e manuais através de automação inteligente, aumentando a produtividade, reduzindo erros e otimizando seus fluxos de trabalho.">
+    <meta name="description" content="Automação de processos e RPA para eliminar tarefas repetitivas, aumentar produtividade e integrar sistemas empresariais.">
+    <meta name="keywords" content="automação de processos, RPA, automação empresarial, integração de sistemas, produtividade">
+    <link rel="canonical" href="https://labregoia.com/servicos/automacao-processos">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Labrego IA">
+    <meta property="og:title" content="Automação de Processos - Labrego IA">
+    <meta property="og:description" content="Automação de processos e RPA para eliminar tarefas repetitivas, aumentar produtividade e integrar sistemas empresariais.">
+    <meta property="og:url" content="https://labregoia.com/servicos/automacao-processos">
+    <meta property="og:image" content="https://labregoia.com/assets/LogoPrincipal-1.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Automação de Processos - Labrego IA">
+    <meta name="twitter:description" content="Automação de processos e RPA para eliminar tarefas repetitivas, aumentar produtividade e integrar sistemas empresariais.">
+    <meta name="twitter:image" content="https://labregoia.com/assets/LogoPrincipal-1.png">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
