--- a/index.html
+++ b/index.html
@@ -830,7 +830,8 @@
     </div>
 
     <script src="js/script.js"></script>
-    <script src="js/cases-gallery.js" defer></script>
+    <script src="js/cases-vitrine.js" defer></script>
+
 
 </body>
 </html>
