--- a/index.html
+++ b/index.html
@@ -320,104 +320,118 @@
 
     <div class="cases__grid" aria-label="Lista de projetos">
       <!-- Card 1 -->
-      <article class="case-card"
-        data-title="Sistema de Gestão Dan-sa"
-        data-tags="CRM, Financeiro, Aulas Online"
-        data-images='[
-          "assets/case01/case01.png",
-          "assets/case01/case02.png",
-          "assets/case01/case03.png",
-          "assets/case01/case04.png",
-          "assets/case01/case05.png",
-          "assets/case01/case06.png",
-          "assets/case01/case07.png"
-        ]'>
-        <button class="case-card__inner" aria-label="Abrir caso: Sistema de Gestão Dan-sa">
-          <figure class="case-card__media">
-            <img src="assets/case01/case07.png" alt="Sistema de Gestão Dan-sa" loading="lazy" decoding="async" width="800" height="500">
-            <figcaption class="case-card__caption">
-              <span class="case-card__title">Sistema de Gestão Dan-sa</span>
-              <span class="case-card__badge">Sistema de Gestão</span>
-            </figcaption>
-          </figure>
-        </button>
-      </article>
+    <!-- Card 1 -->
+<article class="case-card"
+  data-title="Sistema de Gestão Dan-sa"
+  data-tags="CRM, Financeiro, Aulas Online"
+  data-images='[
+    "assets/case01/case01.png",
+    "assets/case01/case02.png",
+    "assets/case01/case03.png",
+    "assets/case01/case04.png",
+    "assets/case01/case05.png",
+    "assets/case01/case06.png",
+    "assets/case01/case07.png"
+  ]'>
+  <button class="case-card__inner" aria-label="Abrir caso: Sistema de Gestão Dan-sa">
+    <figure class="case-card__media">
+      <img src="assets/case01/case07.png" alt="Sistema de Gestão Dan-sa" loading="lazy" decoding="async" width="800" height="500">
+    </figure>
+    <div class="case-card__caption">
+      <span class="case-card__title">Sistema de Gestão Dan-sa</span>
+      <span class="case-card__badge">Sistema de Gestão</span>
+    </div>
+    <div class="case-card__body">
+      <p>CRM, funil de vendas, financeiro e aulas online.</p>
+    </div>
+  </button>
+</article>
 
-      <!-- Card 2 -->
-      <article class="case-card"
-        data-title="Cout Barbershop"
-        data-tags="Barbearia, PDV, Agendamentos, Estoque"
-        data-images='[
-          "assets/case02/case02_05.png",
-          "assets/case02/case02_08.png",
-          "assets/case02/case02_04.png",
-          "assets/case02/case02_01.png",
-          "assets/case02/case02_06.png",
-          "assets/case02/case02_07.png"
-        ]'>
-        <button class="case-card__inner" aria-label="Abrir caso: Cout Barbershop">
-          <figure class="case-card__media">
-            <img src="assets/case02/case02_04.png" alt="Cout Barbershop - Sistema de Gestão" loading="lazy" decoding="async" width="800" height="500">
-            <figcaption class="case-card__caption">
-              <span class="case-card__title">Cout Barbershop</span>
-              <span class="case-card__badge">Sistema de Gestão</span>
-            </figcaption>
-          </figure>
-        </button>
-      </article>
+<!-- Card 2 -->
+<article class="case-card"
+  data-title="Cout Barbershop"
+  data-tags="Barbearia, PDV, Agendamentos, Estoque"
+  data-images='[
+    "assets/case02/case02_05.png",
+    "assets/case02/case02_08.png",
+    "assets/case02/case02_04.png",
+    "assets/case02/case02_01.png",
+    "assets/case02/case02_06.png",
+    "assets/case02/case02_07.png"
+  ]'>
+  <button class="case-card__inner" aria-label="Abrir caso: Cout Barbershop">
+    <figure class="case-card__media">
+      <img src="assets/case02/case02_04.png" alt="Cout Barbershop - Sistema de Gestão" loading="lazy" decoding="async" width="800" height="500">
+    </figure>
+    <div class="case-card__caption">
+      <span class="case-card__title">Cout Barbershop</span>
+      <span class="case-card__badge">Sistema de Gestão</span>
+    </div>
+    <div class="case-card__body">
+      <p>PDV, agenda inteligente, controle de estoque e relatórios.</p>
+    </div>
+  </button>
+</article>
 
-      <!-- Card 3 -->
-      <article class="case-card"
-        data-title="Vitriny AI"
-        data-tags="IA, Transformação de Imagens, SaaS"
-        data-images='[
-          "assets/case03/case03_01.png",
-          "assets/case03/case03_02.png",
-          "assets/case03/case03_03.png",
-          "assets/case03/case03_04.png",
-          "assets/case03/case03_05.png",
-          "assets/case03/case03_06.png",
-          "assets/case03/case03_07.png",
-          "assets/case03/case03_08.png"
-        ]'>
-        <button class="case-card__inner" aria-label="Abrir caso: Vitriny AI">
-          <figure class="case-card__media">
-            <img src="assets/case03/case03_01.png" alt="Vitriny AI - Geração de imagens por IA" loading="lazy" decoding="async" width="800" height="500">
-            <figcaption class="case-card__caption">
-              <span class="case-card__title">Vitriny AI</span>
-              <span class="case-card__badge">Inteligência Artificial</span>
-            </figcaption>
-          </figure>
-        </button>
-      </article>
+<!-- Card 3 -->
+<article class="case-card"
+  data-title="Vitriny AI"
+  data-tags="IA, Transformação de Imagens, SaaS"
+  data-images='[
+    "assets/case03/case03_01.png",
+    "assets/case03/case03_02.png",
+    "assets/case03/case03_03.png",
+    "assets/case03/case03_04.png",
+    "assets/case03/case03_05.png",
+    "assets/case03/case03_06.png",
+    "assets/case03/case03_07.png",
+    "assets/case03/case03_08.png"
+  ]'>
+  <button class="case-card__inner" aria-label="Abrir caso: Vitriny AI">
+    <figure class="case-card__media">
+      <img src="assets/case03/case03_01.png" alt="Vitriny AI - Geração de imagens por IA" loading="lazy" decoding="async" width="800" height="500">
+    </figure>
+    <div class="case-card__caption">
+      <span class="case-card__title">Vitriny AI</span>
+      <span class="case-card__badge">Inteligência Artificial</span>
+    </div>
+    <div class="case-card__body">
+      <p>Geração de imagens profissionais com alta produtividade.</p>
+    </div>
+  </button>
+</article>
 
-      <!-- Card 4 -->
-      <article class="case-card"
-        data-title="Grow Properties"
-        data-tags="Leilões, Real Estate, Investimentos"
-        data-images='[
-          "assets/case04/case04_01.png",
-          "assets/case04/case04_02.png",
-          "assets/case04/case04_03.png",
-          "assets/case04/case04_04.png",
-          "assets/case04/case04_05.png",
-          "assets/case04/case04_06.png",
-          "assets/case04/case04_07.png",
-          "assets/case04/case04_08.png",
-          "assets/case04/case04_09.png",
-          "assets/case04/case04_10.png",
-          "assets/case04/case04_11.png"
-        ]'>
-        <button class="case-card__inner" aria-label="Abrir caso: Grow Properties">
-          <figure class="case-card__media">
-            <img src="assets/case04/case04_03.png" alt="Grow Properties - Sistema de Gestão" loading="lazy" decoding="async" width="800" height="500">
-            <figcaption class="case-card__caption">
-              <span class="case-card__title">Grow Properties</span>
-              <span class="case-card__badge">Real Estate</span>
-            </figcaption>
-          </figure>
-        </button>
-      </article>
+<!-- Card 4 -->
+<article class="case-card"
+  data-title="Grow Properties"
+  data-tags="Leilões, Real Estate, Investimentos"
+  data-images='[
+    "assets/case04/case04_01.png",
+    "assets/case04/case04_02.png",
+    "assets/case04/case04_03.png",
+    "assets/case04/case04_04.png",
+    "assets/case04/case04_05.png",
+    "assets/case04/case04_06.png",
+    "assets/case04/case04_07.png",
+    "assets/case04/case04_08.png",
+    "assets/case04/case04_09.png",
+    "assets/case04/case04_10.png",
+    "assets/case04/case04_11.png"
+  ]'>
+  <button class="case-card__inner" aria-label="Abrir caso: Grow Properties">
+    <figure class="case-card__media">
+      <img src="assets/case04/case04_03.png" alt="Grow Properties - Sistema de Gestão" loading="lazy" decoding="async" width="800" height="500">
+    </figure>
+    <div class="case-card__caption">
+      <span class="case-card__title">Grow Properties</span>
+      <span class="case-card__badge">Real Estate</span>
+    </div>
+    <div class="case-card__body">
+      <p>Gestão de leilões, imóveis e investidores com indicadores.</p>
+    </div>
+  </button>
+</article>
+
     </div>
   </div>
 </section>
